--- a/project/src/views/home/index.html
+++ b/project/src/views/home/index.html
@@ -58,7 +58,7 @@
         }
 
         .share_box {
-            padding: 10px 0 10px;
+            padding: 0 0 10px;
             text-align: center;
             width: 100%;
             font-size: 25px;
@@ -71,8 +71,55 @@
     <script src="js/md5.js"></script>
     <script src="js/html2canvas.js"></script>
     <script>
-        var passwd = md5('123456');
-        console.log(passwd)
+        //designWidth:设计稿的实际宽度值，需要根据实际设置
+        //maxWidth:制作稿的最大宽度值，需要根据实际设置
+        //这段js的最后面有两个参数记得要设置，一个为设计稿实际宽度，一个为制作稿最大宽度，例如设计稿为750，最大宽度为750，则为(750,750)
+        ;(function(designWidth, maxWidth) {
+            var doc = document,
+            win = window,
+            docEl = doc.documentElement,
+            remStyle = document.createElement("style"),
+            tid;
+
+            function refreshRem() {
+                var width = docEl.getBoundingClientRect().width;
+                maxWidth = maxWidth || 540;
+                width>maxWidth && (width=maxWidth);
+                var rem = width * 100 / designWidth;
+                remStyle.innerHTML = 'html{font-size:' + rem + 'px;}';
+            }
+
+            if (docEl.firstElementChild) {
+                docEl.firstElementChild.appendChild(remStyle);
+            } else {
+                var wrap = doc.createElement("div");
+                wrap.appendChild(remStyle);
+                doc.write(wrap.innerHTML);
+                wrap = null;
+            }
+            //要等 wiewport 设置好后才能执行 refreshRem，不然 refreshRem 会执行2次；
+            refreshRem();
+
+            win.addEventListener("resize", function() {
+                clearTimeout(tid); //防止执行两次
+                tid = setTimeout(refreshRem, 300);
+            }, false);
+
+            win.addEventListener("pageshow", function(e) {
+                if (e.persisted) { // 浏览器后退的时候重新计算
+                    clearTimeout(tid);
+                    tid = setTimeout(refreshRem, 300);
+                }
+            }, false);
+
+            if (doc.readyState === "complete") {
+                doc.body.style.fontSize = "16px";
+            } else {
+                doc.addEventListener("DOMContentLoaded", function(e) {
+                    doc.body.style.fontSize = "16px";
+                }, false);
+            }
+        })(750, 750);
     </script>
 </head>
 <body>
@@ -82,8 +129,8 @@
                 <div class="center_box">
                 <div class="flex">
                     <div style="padding:28px 28px 8px;">
-                        <img id="head_img" src="img/user.png" style="width:64px;" alt />
-                        <div><b id="nickname" style="font-size:14px;">爱玩的小明</b></div>
+                        <img id="head_img" src="img/user.png" style="width:64px;border-radius:50%;" alt />
+                        <div style="text-align:center;"><b id="nickname" style="font-size:14px;"></b></div>
                     </div>
                     <div
                     class="flex_grow_1"
@@ -108,8 +155,8 @@
                 <div
                     style="color:#FFAB27;text-align:center;position:relative;top:-20px;"
                 >
-                    <span style="font-size: 80px;font-weight:bold;">0</span>
-                    <span id="money_wan" style="font-size:39px;">万</span>
+                    <span id="money_wan" style="font-size: 80px;font-weight:bold;">0</span>
+                    <span style="font-size:39px;">万</span>
                 </div>
                 <div style="padding: 0 20px 0;">
                     <img src="img/xian.png" alt style="width:100%;" />
@@ -137,65 +184,65 @@
 
     
     <script>
-        let device ;
-        let u = navigator.userAgent, app = navigator.appVersion;
-        let isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //g
-        let isIOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
-        if (isAndroid) {
-            device = 0
-        }
-        if (isIOS) {
-            device = 1
-        }
-        var search = location.search;
-        var arr = search.slice(1).split('&');
-        var arr2 = [];
-        console.log(arr)
-        for(var i=0;i<arr.length;i++){
-            var o = arr[i];
-            var c = o.indexOf('=')
-            if(c>0){
-                arr2[o.slice(0,c)] = o.slice(c+1)
+        $(function(){
+            let device ;
+            let u = navigator.userAgent, app = navigator.appVersion;
+            let isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //g
+            let isIOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
+            if (isAndroid) {
+                device = 0
             }
-        }
-        console.log(arr2)
-        if(arr2['code']){
-            alert('ajax')
-            let now = new Date();
-            let md5_data = md5('token=' + now.getTime() + '&key=lldu43d98382');
-            $.ajax({
-                url:'getranddata.php',
-                type:'POST',
-                data:{
-                    code:arr2['code'],
-                    device:device,
-                    pid:arr2['state'],
-                    token:now.getTime(),
-                    data:md5_data
-                },
-                success:function(json){
-                    alert('success')
-                    alert(json)
-                    var data = JSON.parse(json)
-                    if(data.message){
-                        alert(data.message);
-                    }
-                    if(data.errorcode == 0){
-                        $('#head_img').attr('src',headimgurl);
-                        $('#nickname').html(username);
-                        $('#money').html(money);
-                        $('#money_wan').html(money_wan);
-                        $('#barcode').attr('src',barcode);
-                    }
-                    setTimeout(() => {
-                        html2canvas(document.querySelector("body"),{ background:'#000'}).then(canvas => {
-                            $('body').html('<img src="'+canvas.toDataURL("image/png")+'" style="width:100%;">')
-                        });
-                    }, 500);
-                    
+            if (isIOS) {
+                device = 1
+            }
+            var search = location.search;
+            var arr = search.slice(1).split('&');
+            var arr2 = [];
+            for(var i=0;i<arr.length;i++){
+                var o = arr[i];
+                var c = o.indexOf('=')
+                if(c>0){
+                    arr2[o.slice(0,c)] = o.slice(c+1)
                 }
-            })
-        }
+            }
+            if(arr2['code']){
+                let now = new Date();
+                let md5_data = md5('token=' + now.getTime() + '&key=lldu43d98382');
+                $.ajax({
+                    url:'getranddata.php',
+                    type:'POST',
+                    data:{
+                        code:arr2['code'],
+                        device:device,
+                        pid:arr2['state'],
+                        token:now.getTime(),
+                        data:md5_data
+                    },
+                    success:function(json){
+                        var data = JSON.parse(json)
+                        if(data.message){
+                            alert(data.message);
+                            return;
+                        }
+                        if(data.errorcode == 0){
+                            $('#head_img').attr('src',data.headimgurl);
+                            $('#nickname').html(data.username);
+                            $('#money').html(data.money);
+                            $('#money_wan').html(data.money_wan);
+                            $('#barcode').attr('src',data.barcode);
+                        }
+                        setTimeout(() => {
+                            html2canvas(document.querySelector("body"),{ background:'#000'}).then(canvas => {
+                                $('body').html('<img src="'+canvas.toDataURL("image/png")+'" style="width:100%;">')
+                                alert(3)
+                            });
+                        }, 500);
+                        
+                    }
+                })
+            }
+        })
+        
         
         
         
