--- a/project/src/views/home/index.html
+++ b/project/src/views/home/index.html
@@ -25,43 +25,42 @@
         .center_box {
             background: url('img/bg_2.png') 100% 100% no-repeat #FCEADB;
             background-size: 100% 100%;
-            min-height: 8rem;
             border-radius: 0.2rem;
-            padding: 0.2rem 0 0.8rem;
+            padding: 0.2rem 0 0.2rem;
         }
 
         .hf_box {
             background: url('img/hf.png') no-repeat;
             background-size: 100%;
-            height: 46px;
+            height: .92rem;
             text-align: center;
-            padding-top: 4px;
-            font-size: 17px;
+            padding-top: .1rem;
+            font-size: .34rem;
             color: #FCEADB;
         }
 
         .desc_1 {
-            font-size: 16px;
+            font-size: .32rem;
             font-family: Alibaba PuHuiTi;
             font-weight: bold;
             color: rgba(51, 51, 51, 1);
-            padding-left: 10px;
-            padding-top: 4px;
+            padding-left: .25rem;
+            padding-top: .1rem;
         }
 
         .desc_2 {
-            padding: 8px 0 8px 10px;
-            font-size: 12px;
+            padding: .1rem 0 .1rem .25rem;
+            font-size: .24rem;
             font-family: Alibaba PuHuiTi;
             font-weight: 400;
             color: rgba(128, 108, 91, 1);
         }
 
         .share_box {
-            padding: 0 0 10px;
+            padding: .2rem 0 .2rem;
             text-align: center;
             width: 100%;
-            font-size: 25px;
+            font-size: .5rem;
             font-family: Alibaba PuHuiTi;
             font-weight: 400;
             color: rgba(254, 254, 254, 1);
@@ -71,104 +70,59 @@
     <script src="js/md5.js"></script>
     <script src="js/html2canvas.js"></script>
     <script>
-        //designWidth:设计稿的实际宽度值，需要根据实际设置
-        //maxWidth:制作稿的最大宽度值，需要根据实际设置
-        //这段js的最后面有两个参数记得要设置，一个为设计稿实际宽度，一个为制作稿最大宽度，例如设计稿为750，最大宽度为750，则为(750,750)
-        ;(function(designWidth, maxWidth) {
-            var doc = document,
-            win = window,
-            docEl = doc.documentElement,
-            remStyle = document.createElement("style"),
-            tid;
 
-            function refreshRem() {
-                var width = docEl.getBoundingClientRect().width;
-                maxWidth = maxWidth || 540;
-                width>maxWidth && (width=maxWidth);
-                var rem = width * 100 / designWidth;
-                remStyle.innerHTML = 'html{font-size:' + rem + 'px;}';
-            }
-
-            if (docEl.firstElementChild) {
-                docEl.firstElementChild.appendChild(remStyle);
-            } else {
-                var wrap = doc.createElement("div");
-                wrap.appendChild(remStyle);
-                doc.write(wrap.innerHTML);
-                wrap = null;
-            }
-            //要等 wiewport 设置好后才能执行 refreshRem，不然 refreshRem 会执行2次；
-            refreshRem();
-
-            win.addEventListener("resize", function() {
-                clearTimeout(tid); //防止执行两次
-                tid = setTimeout(refreshRem, 300);
-            }, false);
-
-            win.addEventListener("pageshow", function(e) {
-                if (e.persisted) { // 浏览器后退的时候重新计算
-                    clearTimeout(tid);
-                    tid = setTimeout(refreshRem, 300);
-                }
-            }, false);
-
-            if (doc.readyState === "complete") {
-                doc.body.style.fontSize = "16px";
-            } else {
-                doc.addEventListener("DOMContentLoaded", function(e) {
-                    doc.body.style.fontSize = "16px";
-                }, false);
-            }
-        })(750, 750);
+        //引入该flexible.min.js
+!function(e,t){function n(){var n=l.getBoundingClientRect().width;t=t||540,n>t&&(n=t);var i=100*n/e;r.innerHTML="html{font-size:"+i+"px;}"}var i,d=document,o=window,l=d.documentElement,r=document.createElement("style");if(l.firstElementChild)l.firstElementChild.appendChild(r);else{var a=d.createElement("div");a.appendChild(r),d.write(a.innerHTML),a=null}n(),o.addEventListener("resize",function(){clearTimeout(i),i=setTimeout(n,300)},!1),o.addEventListener("pageshow",function(e){e.persisted&&(clearTimeout(i),i=setTimeout(n,300))},!1),"complete"===d.readyState?d.body.style.fontSize="16px":d.addEventListener("DOMContentLoaded",function(e){d.body.style.fontSize="16px"},!1)}(750,750);
     </script>
 </head>
 <body>
     <div style="box-sizing:border-box;height:100%;" id="login">
         <div class="black_box">
-            <div style="box-sizing:border-box;padding:19px 20px 10px;">
+            <div style="box-sizing:border-box;padding:.38rem .4rem .01rem;">
                 <div class="center_box">
                 <div class="flex">
-                    <div style="padding:28px 28px 8px;">
-                        <img id="head_img" src="img/user.png" style="width:64px;border-radius:50%;" alt />
-                        <div style="text-align:center;"><b id="nickname" style="font-size:14px;"></b></div>
+                    <div style="padding:0.66rem 0.66rem 0.01rem;">
+                        <img id="head_img" src="img/user.png" style="width:1.28rem;border-radius:50%;" alt />
+                        <div style="text-align:center;"><b id="nickname" style="font-size:0.26rem;"></b></div>
                     </div>
                     <div
                     class="flex_grow_1"
-                    style="text-align:right;padding-right:21px;"
+                    style="text-align:right;padding-right:0.52rem;"
                     >
-                    <img src="img/2020.png" style="width:162px;" alt />
+                    <img src="img/2020.png" style="width:3.5rem;" alt />
                     </div>
                 </div>
     
-                <div style="padding:0 20px;font-size:0;">
+                <div style="padding:0 .4rem;font-size:0;">
                     <img src="img/xian.png" alt style="width:100%;" />
                 </div>
-                <div class="flex" style="padding:0 5px;">
-                    <img src="img/bp_l.png" alt style="width:50px" />
+                <div class="flex" style="padding:0 .1rem;position:relative;padding-bottom:.1rem;">
+                    <img src="img/bp_l.png" alt style="width:1.01rem" />
                     <div class="flex_grow_1 hf_box">
                     <!-- <img src="~@/assets/img/hf.png" style="width:100%;" /> -->
                     ￥<span id="money">00</span>
+                    
                     </div>
-                    <img src="img/bp_r.png" alt style="width:50px" />
+                    <img src="img/bp_r.png" alt style="width:1.01rem" />
+                    
                 </div>
-    
-                <div
-                    style="color:#FFAB27;text-align:center;position:relative;top:-20px;"
-                >
-                    <span id="money_wan" style="font-size: 80px;font-weight:bold;">0</span>
-                    <span style="font-size:39px;">万</span>
+                <div   style="color:#FFAB27;text-align:center;position:relative;top:-.5rem;">
+                    <span id="money_wan" style="font-size:1.63rem;font-weight:bold;">0</span>
+                    <span style="font-size:0.79rem;">万</span>
                 </div>
-                <div style="padding: 0 20px 0;">
+               
+                
+                <div style="padding: 0 .4rem 0;font-size:0;">
                     <img src="img/xian.png" alt style="width:100%;" />
                 </div>
                 <div class="flex">
-                    <div class="flex_grow_1" style="padding-left:15px;">
+                    <div class="flex_grow_1" style="padding-left:.3rem;">
                     <div class="desc_1">长按识别右边二维码</div>
                     <div class="desc_2">看看你2020年能赚多少钱</div>
-                    <img src="img/bp.png" style="width:169px;" alt />
+                    <img src="img/bp.png" style="width:3.38rem;" alt />
                     </div>
-                    <div style="padding-right:26px;">
-                    <img id="barcode" src="img/waleqrcode.png" style="width:75px;" alt />
+                    <div style="padding-right:.64rem;">
+                    <img id="barcode" src="img/waleqrcode.png" style="width:1.5rem;" alt />
                     </div>
                 </div>
                 </div>
@@ -221,7 +175,8 @@
                     success:function(json){
                         var data = JSON.parse(json)
                         if(data.message){
-                            alert(data.message);
+                            $('body').html('<h3>'+data.message+'</h3>')
+                            // alert(data.message);
                             return;
                         }
                         if(data.errorcode == 0){
@@ -234,7 +189,6 @@
                         setTimeout(() => {
                             html2canvas(document.querySelector("body"),{ background:'#000'}).then(canvas => {
                                 $('body').html('<img src="'+canvas.toDataURL("image/png")+'" style="width:100%;">')
-                                alert(3)
                             });
                         }, 500);
                         
