--- a/project/src/views/home/test.html
+++ b/project/src/views/home/test.html
@@ -21,22 +21,27 @@
     </style>
     <script src="js/jquery-1.11.3.js"></script>
     <!-- <script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script> -->
+    <script>
+
+            //引入该flexible.min.js
+    !function(e,t){function n(){var n=l.getBoundingClientRect().width;t=t||540,n>t&&(n=t);var i=100*n/e;r.innerHTML="html{font-size:"+i+"px;}"}var i,d=document,o=window,l=d.documentElement,r=document.createElement("style");if(l.firstElementChild)l.firstElementChild.appendChild(r);else{var a=d.createElement("div");a.appendChild(r),d.write(a.innerHTML),a=null}n(),o.addEventListener("resize",function(){clearTimeout(i),i=setTimeout(n,300)},!1),o.addEventListener("pageshow",function(e){e.persisted&&(clearTimeout(i),i=setTimeout(n,300))},!1),"complete"===d.readyState?d.body.style.fontSize="16px":d.addEventListener("DOMContentLoaded",function(e){d.body.style.fontSize="16px"},!1)}(750,750);
+    </script>
 </head>
 <body>
     <div id="login">
-        <div style="padding:25px 7.5px 0;font-size:0;">
+        <div style="padding:.5rem .14rem 0;font-size:0;">
             <img src="img/bg_1.png" alt style="width:100%;" />
         </div>
-        <div class="flex">
-            <img src="img/dl_1.png" alt style="width:38px" />
-            <div class="flex_grow_1 flex">
-                <img src="img/dash.png" style="width:56px;height:1.2px;" />
-                <div class="flex_grow_1" style="padding:0 4px;">
+        <div class="flex" style="padding:0 .06rem;">
+            <img src="img/dl_1.png" alt style="width:.72rem" />
+            <div class="flex_grow_1 flex" >
+                <img src="img/dash.png" style="width:1.02rem;height:.02rem;" />
+                <div class="flex_grow_1" style="padding:0 .1rem;">
                     <img id="go_test_btn" src="img/btn.png" @click="go_test" alt style="width:100%;" />
                 </div>
-                <img src="img/dash.png" style="width:56px;height:1.2px;" />
+                <img src="img/dash.png" style="width:1.02rem;height:.02rem;" />
             </div>
-            <img src="img/dl_2.png" alt style="width:38px" />
+            <img src="img/dl_2.png" alt style="width:.72rem" />
         </div>
     </div>
     
