--- a/project/src/views/home/index.html
+++ b/project/src/views/home/index.html
@@ -20,7 +20,7 @@
             margin:0;
         }
         html,body{
-            height:100%;
+            /* height:100%; */
         }
         .center_box {
             background: url('img/bg_2.png') 100% 100% no-repeat #FCEADB;
@@ -31,11 +31,11 @@
 
         .hf_box {
             background: url('img/hf.png') no-repeat;
-            background-size: 100%;
+            background-size: 100% 100%;
             height: .92rem;
             text-align: center;
-            padding-top: .1rem;
-            font-size: .34rem;
+            /* padding-top: .1rem; */
+            font-size: .36rem;
             color: #FCEADB;
         }
 
@@ -57,10 +57,10 @@
         }
 
         .share_box {
-            padding: .2rem 0 .2rem;
+            padding: .1rem 0 .2rem;
             text-align: center;
             width: 100%;
-            font-size: .5rem;
+            font-size: .4rem;
             font-family: Alibaba PuHuiTi;
             font-weight: 400;
             color: rgba(254, 254, 254, 1);
@@ -76,9 +76,9 @@
     </script>
 </head>
 <body>
-    <div style="box-sizing:border-box;height:100%;" id="login">
-        <div class="black_box">
-            <div style="box-sizing:border-box;padding:.38rem .4rem .01rem;">
+    <div style="box-sizing:border-box;height:100%;padding:.38rem .4rem .01rem;" id="login">
+        <div id="black_box">
+            <div style="box-sizing:border-box;position: relative;;left:-150%;" id="img_box">
                 <div class="center_box">
                 <div class="flex">
                     <div style="padding:0.66rem 0.66rem 0.01rem;">
@@ -100,14 +100,14 @@
                     <img src="img/bp_l.png" alt style="width:1.01rem" />
                     <div class="flex_grow_1 hf_box">
                     <!-- <img src="~@/assets/img/hf.png" style="width:100%;" /> -->
-                    ￥<span id="money">00</span>
+                    ￥<span id="money"></span>
                     
                     </div>
                     <img src="img/bp_r.png" alt style="width:1.01rem" />
                     
                 </div>
                 <div   style="color:#FFAB27;text-align:center;position:relative;top:-.5rem;">
-                    <span id="money_wan" style="font-size:1.63rem;font-weight:bold;">0</span>
+                    <span id="money_wan" style="font-size:1.63rem;font-weight:bold;"></span>
                     <span style="font-size:0.79rem;">万</span>
                 </div>
                
@@ -127,13 +127,12 @@
                 </div>
                 </div>
             </div>
-    
             <!-- <img v-if="!no_img" :src="dataURL" alt="" style="width:100%;" /> -->
-            <div class="share_box" >
-                长按图片保存后，可分享
-            </div>
+            
         </div>
-        
+        <div class="share_box" >
+            长按图片保存后，可分享
+        </div>
     </div>
 
     
@@ -187,8 +186,8 @@
                             $('#barcode').attr('src',data.barcode);
                         }
                         setTimeout(() => {
-                            html2canvas(document.querySelector("body"),{ background:'#000'}).then(canvas => {
-                                $('body').html('<img src="'+canvas.toDataURL("image/png")+'" style="width:100%;">')
+                            html2canvas(document.querySelector("#img_box"),{ background:'#000'}).then(canvas => {
+                                $('#black_box').html('<img src="'+canvas.toDataURL("image/png")+'" style="width:100%;border-radius:.2rem;">')
                             });
                         }, 500);
                         
