--- a/project/src/views/home/index.html
+++ b/project/src/views/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>活动测试</title>
+    <title>2020年的你</title>
     <style>
         .flex{
             display: flex;
@@ -143,14 +143,46 @@
         $(function(){
             // setTimeout(() => {
             //     $('body,html').animate({'scrollTop':0},0,function(){
-            //         html2canvas(document.querySelector("#img_box"),{ 
-            //             background:'#000',
-            //             useCORS: true,
-            //             width:$('#img_box').width(),//设置canvas尺寸与所截图尺寸相同，防止白边
-            //             height:$('#img_box').height(),//防止白边
-            //         }).then(canvas => {
-            //             $('#black_box').html('<img src="'+canvas.toDataURL()+'" style="width:100%;border-radius:.2rem;">')
-            //         });
+            //         var t_img; // 定时器
+            //         var isLoad = true; // 控制变量
+            //         // 判断图片加载的函数
+            //         function isImgLoad(callback){
+            //             // 注意我的图片类名都是cover，因为我只需要处理cover。其它图片可以不管。
+            //             // 查找所有封面图，迭代处理
+            //             $('img').each(function(){
+            //                 // 找到为0就将isLoad设为false，并退出each
+            //                 console.log(this.height)
+            //                 if(this.height === 0){
+            //                     isLoad = false;
+            //                     return false;
+            //                 }
+            //             });
+            //             // 为true，没有发现为0的。加载完毕
+            //             if(isLoad){
+            //             clearTimeout(t_img); // 清除定时器
+            //             // 回调函数
+            //             callback();
+            //             // 为false，因为找到了没有加载完成的图，将调用定时器递归
+            //             }else{
+            //                 isLoad = true;
+            //                 t_img = setTimeout(function(){
+            //                     isImgLoad(callback); // 递归扫描
+            //                 },500); // 我这里设置的是500毫秒就扫描一次，可以自己调整
+            //             }
+            //         }
+            //         function callback(){
+            //             html2canvas(document.querySelector("#img_box"),{ 
+            //                 background:'#000',
+            //                 useCORS: true,
+            //                 width:$('#img_box').width(),//设置canvas尺寸与所截图尺寸相同，防止白边
+            //                 height:$('#img_box').height(),//防止白边
+            //             }).then(canvas => {
+            //                 $('#black_box').html('<img src="'+canvas.toDataURL()+'" style="width:100%;border-radius:.2rem;">')
+            //             });
+            //         }
+            //         // 判断图片加载状况，加载完成后回调
+            //         isImgLoad(callback);
+                    
             //     });
                 
             // }, 500);
@@ -206,14 +238,47 @@
                             //     $('#black_box').html('<img src="'+canvas.toDataURL("image/png")+'" style="width:100%;border-radius:.2rem;">')
                             // });
                             $('body,html').animate({'scrollTop':0},0,function(){
-                                html2canvas(document.querySelector("#img_box"),{ 
-                                    background:'#000',
-                                    useCORS: true,
-                                    width:$('#img_box').width(),//设置canvas尺寸与所截图尺寸相同，防止白边
-                                    height:$('#img_box').height(),//防止白边
-                                }).then(canvas => {
-                                    $('#black_box').html('<img src="'+canvas.toDataURL()+'" style="width:100%;border-radius:.2rem;">')
-                                });
+                                
+                                var t_img; // 定时器
+                                var isLoad = true; // 控制变量
+                                // 判断图片加载的函数
+                                function isImgLoad(callback){
+                                    // 注意我的图片类名都是cover，因为我只需要处理cover。其它图片可以不管。
+                                    // 查找所有封面图，迭代处理
+                                    $('img').each(function(){
+                                        // 找到为0就将isLoad设为false，并退出each
+                                        console.log(this.height)
+                                        if(this.height === 0){
+                                            isLoad = false;
+                                            return false;
+                                        }
+                                    });
+                                    // 为true，没有发现为0的。加载完毕
+                                    if(isLoad){
+                                    clearTimeout(t_img); // 清除定时器
+                                    // 回调函数
+                                    callback();
+                                    // 为false，因为找到了没有加载完成的图，将调用定时器递归
+                                    }else{
+                                        isLoad = true;
+                                        t_img = setTimeout(function(){
+                                            isImgLoad(callback); // 递归扫描
+                                        },500); // 我这里设置的是500毫秒就扫描一次，可以自己调整
+                                    }
+                                }
+                                function callback(){
+                                    html2canvas(document.querySelector("#img_box"),{ 
+                                        background:'#000',
+                                        useCORS: true,
+                                        width:$('#img_box').width(),//设置canvas尺寸与所截图尺寸相同，防止白边
+                                        height:$('#img_box').height(),//防止白边
+                                    }).then(canvas => {
+                                        $('#black_box').html('<img src="'+canvas.toDataURL()+'" style="width:100%;border-radius:.2rem;">')
+                                    });
+                                }
+                                // 判断图片加载状况，加载完成后回调
+                                isImgLoad(callback);  
+                                
                             });
                         }, 500);
                         
